--- a/ansible/playbooks/setup_docker_host.yml
+++ b/ansible/playbooks/setup_docker_host.yml
@@ -5,3 +5,8 @@
     - docker_engine
   vars:
     ansible_python_interpreter: "/usr/bin/python3" # (#19605)
+
+- hosts: docker_hosts
+  become: yes
+  roles:
+    - docker_CICD
