#7 Create / setup docker registry

--- a/ansible/roles/services/docker_CICD/tasks/main.yml
+++ b/ansible/roles/services/docker_CICD/tasks/main.yml
@@ -1,5 +1,7 @@
 ---
 - name: "main: Install required packages"
   include_tasks: "pre-setup.yml"
+- name: "main: Setup docker registry"
+  include_tasks: "docker-registry.yml"
 - name: "main: Setup docker containers for jenkins"
   include_tasks: "docker-jenkins.yml"
