#9 Make sure Docker service is available over TCP

--- a/ansible/roles/base/docker_engine/tasks/main.yml
+++ b/ansible/roles/base/docker_engine/tasks/main.yml
@@ -1,3 +1,5 @@
 ---
 - name: "main: Install required packages"
   include_tasks: "pre-setup.yml"
+- name: "main: Make sure docker is up"
+  include_tasks: "docker-service.yml"
