--- a/ansible/roles/base/docker_engine/tasks/docker-service.yml
+++ b/ansible/roles/base/docker_engine/tasks/docker-service.yml
@@ -1,4 +1,11 @@
 ---
+- name: "docker-service: Make sure we can connect to the API"
+  lineinfile:
+    path: "/lib/systemd/system/docker.service"
+    regex: "^ExecStart=*"
+    line: "ExecStart=/usr/bin/dockerd -H fd:// -H tcp://0.0.0.0:2375"
+  notify: "Restart docker service and reload daemon"
+
 - name: "docker-service: Make sure docker-ce is setup"
   service:
     state: started
