--- a/ansible/roles/services/docker_CICD/vars/main.yml
+++ b/ansible/roles/services/docker_CICD/vars/main.yml
@@ -2,3 +2,6 @@
 docker_host_pre_packages:
   - name: "docker"
 ansible_python_interpreter: "/usr/bin/python" # (#19605)
+
+docker_containers_persistent_volume_loc: "/tmp/volumes"
+jenkins_master_persistent_volume: "/tmp/volumes/jenkins-master/jenkins_home"
