--- a/ansible/roles/services/docker_CICD/vars/main.yml
+++ b/ansible/roles/services/docker_CICD/vars/main.yml
@@ -5,3 +5,13 @@ ansible_python_interpreter: "/usr/bin/python" # (#19605)
 
 docker_containers_persistent_volume_loc: "/tmp/volumes"
 jenkins_master_persistent_volume: "/tmp/volumes/jenkins-master/jenkins_home"
+
+docker_Dockerfiles_loc: "/tmp/Dockerfiles/"
+
+docker_images:
+  - name: "jenkins-slave-npm"
+    path: "/tmp/Dockerfiles/jenkins-slave-npm"
+    dockerfile: "/tmp/Dockerfiles/jenkins-slave-npm/Dockerfile"
+
+docker_registry_port: "5000"
+docker_registry_URI: "localhost:5000"
