#37 Enabling jenkins-master to spin up containers

--- a/ansible/roles/services/docker_CICD/tasks/docker-jenkins.yml
+++ b/ansible/roles/services/docker_CICD/tasks/docker-jenkins.yml
@@ -20,7 +20,7 @@
   loop_control:
     loop_var: docker_image
 
-- name: "docker-jenkins: Push the predefined jobs and pipelines" # Jenkins AFAIK will not automatically pick them up if they differ - perhaps a restart notify? 
+- name: "docker-jenkins: Push the predefined jobs and pipelines as well as the main config.xml" # Jenkins AFAIK will not automatically pick them up if they differ - perhaps a restart notify? 
   synchronize:
     src: "jenkins_master/"
     dest: "{{ jenkins_master_persistent_volume }}/"
