#39 Make jenkins-master connect to the host docker socket

--- a/ansible/roles/services/docker_CICD/files/Dockerfiles/jenkins-master/Dockerfile
+++ b/ansible/roles/services/docker_CICD/files/Dockerfiles/jenkins-master/Dockerfile
@@ -1,5 +1,23 @@
 FROM jenkins/jenkins:lts
 
+USER root
+
+RUN apt-get update && \
+apt-get -y install apt-transport-https \
+    ca-certificates \
+    curl \
+    gnupg2 \
+    software-properties-common \
+    lsb-release && \
+curl -fsSL https://download.docker.com/linux/$(. /etc/os-release; echo "$ID")/gpg > /tmp/dkey; apt-key add /tmp/dkey && \
+add-apt-repository \
+    "deb [arch=amd64] https://download.docker.com/linux/$(. /etc/os-release; echo "$ID") \
+    $(lsb_release -cs) \
+    stable" && \
+apt-get update -y && \
+apt-get install -y docker-ce
+RUN usermod -a -G docker jenkins
+
 USER jenkins 
 
 ENV JAVA_OPTS="-Djenkins.install.runSetupWizard=false"
