--- a/ansible/roles/services/docker_CICD/tasks/docker-jenkins.yml
+++ b/ansible/roles/services/docker_CICD/tasks/docker-jenkins.yml
@@ -34,3 +34,4 @@
       - "8080:8080"
     volumes:
       - "{{ jenkins_master_persistent_volume }}:/var/jenkins_home"
+      - /var/run/docker.sock:/var/run/docker.sock
