#41 Add ansible agent

--- a/ansible/roles/services/docker_CICD/vars/main.yml
+++ b/ansible/roles/services/docker_CICD/vars/main.yml
@@ -12,6 +12,9 @@ docker_images:
   - name: "jenkins-slave-npm"
     path: "/tmp/Dockerfiles/jenkins-slave-npm"
     dockerfile: "/tmp/Dockerfiles/jenkins-slave-npm/Dockerfile"
+  - name: "jenkins-slave-ansible"
+    path: "/tmp/Dockerfiles/jenkins-slave-ansible"
+    dockerfile: "/tmp/Dockerfiles/jenkins-slave-ansible/Dockerfile"
   - name: "jenkins-master"
     path: "/tmp/Dockerfiles/jenkins-master"
     dockerfile: "/tmp/Dockerfiles/jenkins-master/Dockerfile"
