--- a/ansible/roles/base/aws_host/tasks/setup_aws_environment.yml
+++ b/ansible/roles/base/aws_host/tasks/setup_aws_environment.yml
@@ -25,12 +25,9 @@
   loop: "{{ ec2_hosts }}"
   loop_control:
     loop_var: ec2_host
-
-- ec2_instance_facts:
-    filters:
-      "tag:Name": "Test"
   register: ec2_metadata
 
 - name: "setup_aws_environment: Print the facts (we need this to setup our local hosts file)"
   debug:
-    msg: "private_ip:{{ ec2_metadata.instances[0].private_ip_address }} public_ip:{{ ec2_metadata.instances[0].public_ip_address }}"
+    msg: "private_ip: {{ ec2_metadata.results[0].tagged_instances[0].private_ip }} public_ip: {{ ec2_metadata.results[0].tagged_instances[0].public_ip }}"
+      #msg: "private_ip:{{ ec2_metadata.instances[1].private_ip_address }} public_ip:{{ ec2_metadata.instances[1].public_ip_address }}"
